[project]
name = "gdomains_2_porkbun"
version = "0.0.1"
description = "Create porkbun DNS records from Google Domains YAML exports"
authors = [{ name = "Ricardo Rosales", email = "728243+missingcharacter@users.noreply.github.com" }]
requires-python = "~=3.10"
dependencies = [
    "click>=8.1.7,<9",
    "ruamel-yaml>=0.19.1,<0.20",
    "porkbun-api>=2.0.0,<3",
    "ruamel-yaml-clib==0.2.15",
]

[dependency-groups]
dev = [
    "poethepoet>=0.41,<0.42",
    "types-requests>=2.31.0.20231231,<3",
    "mypy>=1.8.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.yamlfix]
line_length = 1000
comments_min_spaces_from_content = 1
flow_style_sequence = false
sequence_style = "keep_style"
preserve_quotes = true

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    "__pycache__",
    "old",
    "build"
]

[tool.ruff.lint]
extend-select = ["I"] # asks ruff to include imports in linting

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
